--- a/DeliveryShare/App.xaml
+++ b/DeliveryShare/App.xaml
@@ -47,5 +47,15 @@
             <Setter Property="Background" Value="{StaticResource subColor}" />
             <Setter Property="Foreground" Value="{StaticResource mainColor}" />
         </Style>
+        <Style x:Key="searchTextBox" TargetType="TextBox">
+            <Setter Property="Background" Value="#ffffff" />
+            <!--<Setter Property="Foreground" Value="{StaticResource grayColor}" />-->
+            <Setter Property="FontSize" Value="12" />
+            <Setter Property="Padding" Value="150,15" />
+            <Setter Property="Margin" Value="0,10" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+
+        </Style>
+
     </Application.Resources>
 </Application>
